--- a/Labs/Lab2/Exercise2/flume.conf
+++ b/Labs/Lab2/Exercise2/flume.conf
@@ -6,9 +6,12 @@ a1.sinks = k1
 a1.channels = c1
 
 # Describe/configure the source
-a1.sources.r1.type = netcat
-a1.sources.r1.bind = localhost
-a1.sources.r1.port = 44444
+#a1.sources.r1.type = netcat
+a1.sources.r1.type = syslogtcp
+#a1.sources.r1.bind = localhost
+a1.sources.r1.host = 127.0.0.1
+#a1.sources.r1.port = 44444
+a1.sources.r1.port = 5140 
 
 # Describe the sink
 a1.sinks.k1.type = logger
