Uploading working flume configuration file with write to disk working.  Also adding the ryslog.conf file in case I want to refer to it later.

--- a/Labs/Lab2/Exercise2/flume.conf
+++ b/Labs/Lab2/Exercise2/flume.conf
@@ -14,7 +14,13 @@ a1.sources.r1.host = 127.0.0.1
 a1.sources.r1.port = 5140 
 
 # Describe the sink
-a1.sinks.k1.type = logger
+a1.sinks.k1.type = hdfs
+a1.sinks.k1.hdfs.fileType = DataStream
+a1.sinks.k1.hdfs.writeFormat = Text
+a1.sinks.k1.hdfs.path = /user/user01/exercise2
+a1.sinks.k1.hdfs.filePrefix = events
+
+a1.sinks.k2.type = logger
 
 # Use a channel which buffers events in memory
 a1.channels.c1.type = memory
