--- a/Labs/Lab2/Exercise2/syslog-flume.conf
+++ b/Labs/Lab2/Exercise2/syslog-flume.conf
@@ -1,32 +1,32 @@
 # example.conf: A single-node Flume configuration
 
 # Name the components on this agent
-a1.sources = r1
-a1.sinks = k1
-a1.channels = c1
+agent.sources = r1
+agent.sinks = k1
+agent.channels = c1
 
 # Describe/configure the source
-#a1.sources.r1.type = netcat
-a1.sources.r1.type = syslogtcp
-#a1.sources.r1.bind = localhost
-a1.sources.r1.host = 127.0.0.1
-#a1.sources.r1.port = 44444
-a1.sources.r1.port = 5140 
+#agent.sources.r1.type = netcat
+agent.sources.r1.type = syslogtcp
+#agent.sources.r1.bind = localhost
+agent.sources.r1.host = 127.0.0.1
+#agent.sources.r1.port = 44444
+agent.sources.r1.port = 5140 
 
 # Describe the sink
-a1.sinks.k1.type = hdfs
-a1.sinks.k1.hdfs.fileType = DataStream
-a1.sinks.k1.hdfs.writeFormat = Text
-a1.sinks.k1.hdfs.path = /user/user01/exercise2
-a1.sinks.k1.hdfs.filePrefix = events
+agent.sinks.k1.type = hdfs
+agent.sinks.k1.hdfs.fileType = DataStream
+agent.sinks.k1.hdfs.writeFormat = Text
+agent.sinks.k1.hdfs.path = /user/user01/exercise2
+agent.sinks.k1.hdfs.filePrefix = events
 
-a1.sinks.k2.type = logger
+agent.sinks.k2.type = logger
 
 # Use a channel which buffers events in memory
-a1.channels.c1.type = memory
-a1.channels.c1.capacity = 1000
-a1.channels.c1.transactionCapacity = 100
+agent.channels.c1.type = memory
+agent.channels.c1.capacity = 1000
+agent.channels.c1.transactionCapacity = 100
 
 # Bind the source and sink to the channel
-a1.sources.r1.channels = c1
-a1.sinks.k1.channel = c1
+agent.sources.r1.channels = c1
+agent.sinks.k1.channel = c1
