Configuring the agent in the format requested by Professor Casaletto for the flume agent.  This should now be complete.

--- a/Labs/Lab2/Exercise2/syslog-flume.conf
+++ b/Labs/Lab2/Exercise2/syslog-flume.conf
@@ -2,7 +2,7 @@
 
 # Name the components on this agent
 agent.sources = r1
-agent.sinks = k1
+agent.sinks = MapRFS 
 agent.channels = c1
 
 # Describe/configure the source
@@ -14,11 +14,11 @@ agent.sources.r1.host = 127.0.0.1
 agent.sources.r1.port = 5140 
 
 # Describe the sink
-agent.sinks.k1.type = hdfs
-agent.sinks.k1.hdfs.fileType = DataStream
-agent.sinks.k1.hdfs.writeFormat = Text
-agent.sinks.k1.hdfs.path = /user/user01/exercise2
-agent.sinks.k1.hdfs.filePrefix = events
+agent.sinks.MapRFS.type = hdfs
+agent.sinks.MapRFS.hdfs.fileType = DataStream
+agent.sinks.MapRFS.hdfs.writeFormat = Text
+agent.sinks.MapRFS.hdfs.path = /user/user01/exercise2
+agent.sinks.MapRFS.hdfs.filePrefix = events
 
 agent.sinks.k2.type = logger
 
@@ -29,4 +29,4 @@ agent.channels.c1.transactionCapacity = 100
 
 # Bind the source and sink to the channel
 agent.sources.r1.channels = c1
-agent.sinks.k1.channel = c1
+agent.sinks.MapRFS.channel = c1
