Fixing error in namenode code that was causing invalid errors when trying to build.  Now getting a different error.

--- a/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
+++ b/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
@@ -1,5 +1,5 @@
-nameNode=maprfs:///
-jobTracker=maprfs:///
+nameNode=mapr1node:7222
+jobTracker=mapr1node:8032
 queueName=default
 examplesRoot=examples
 
