Commit my lab files for today.  This is the furthest I got and it is not great.

--- a/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
+++ b/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
@@ -1,5 +1,5 @@
-nameNode=mapr1node:7222
-jobTracker=mapr1node:8032
+nameNode=hdfs://localhost:7220
+jobTracker=localhost:8032
 queueName=default
 examplesRoot=examples
 
