--- a/Labs/Lab2/Exercise1/kafka-flume.conf
+++ b/Labs/Lab2/Exercise1/kafka-flume.conf
@@ -4,7 +4,7 @@ tier1.sinks = sink1
  
 tier1.sources.source1.type = syslogtcp 
 tier1.sources.source1.host = 127.0.0.1
-tier1.sources.r1.port = 5140
+tier1.sources.source1.port = 5140
  
 tier1.channels.channel1.type = memory
 tier1.channels.channel1.capacity = 10000
