Adding code for the modified example trying to run oozie.

--- a/Labs/Lab2/Exercise4/STDEV/map-reduce/job.properties
+++ b/Labs/Lab2/Exercise4/STDEV/map-reduce/job.properties
@@ -17,9 +17,12 @@
 #
 
 nameNode=maprfs:///
-jobTracker=localhost:8032
+jobTracker=mapr1node:8032
 queueName=default
 examplesRoot=examples
+
+#oozie.libpath=/oozie/share/lib
+oozie.use.system.libpath=true
 
 oozie.wf.application.path=/user/user01/map-reduce/workflow.xml
 outputDir=map-reduce
