--- a/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
+++ b/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
@@ -3,5 +3,8 @@ jobTracker=localhost:8032
 queueName=default
 examplesRoot=examples
 
-oozie.wf.application.path=/user/user01/lab2/exercise4/zayd_hammoudeh_lab2_exercise4/workflow.xml
+oozie.use.system.libpath=true
+oozie.libpath=maprfs:///oozie/share/lib
+
+oozie.wf.application.path=maprfs:///user/user01/lab2/exercise4/zayd_hammoudeh_lab2_exercise4/workflow.xml
 
