--- a/Labs/Lab2/Exercise1/kafka-flume.conf
+++ b/Labs/Lab2/Exercise1/kafka-flume.conf
@@ -10,7 +10,7 @@ tier1.sources.source1.channels = channel1
 tier1.channels.channel1.type = memory
  
 tier1.sinks.sink1.type = org.apache.flume.sink.kafka.KafkaSink
-tier1.sinks.sink1.topic = logtest
+tier1.sinks.sink1.topic = zayd_hammoudeh 
 tier1.sinks.sink1.brokerList = localhost:9092 
 tier1.sinks.sink1.channel = channel1
 tier1.sinks.sink1.batchSize = 1 
