Changing syslog-flume.conf to write to the direct "/user/user01/syslog2flume" per the updated lab specification.

--- a/Labs/Lab2/Exercise2/syslog-flume.conf
+++ b/Labs/Lab2/Exercise2/syslog-flume.conf
@@ -17,7 +17,7 @@ agent.sources.r1.port = 5140
 agent.sinks.MapRFS.type = hdfs
 agent.sinks.MapRFS.hdfs.fileType = DataStream
 agent.sinks.MapRFS.hdfs.writeFormat = Text
-agent.sinks.MapRFS.hdfs.path = /user/user01/exercise2
+agent.sinks.MapRFS.hdfs.path = /user/user01/syslog2flume
 agent.sinks.MapRFS.hdfs.filePrefix = events
 
 agent.sinks.k2.type = logger
