Fixes to workflow.xml and job.properties for lab 2.

--- a/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
+++ b/Labs/Lab2/Exercise4/STDEV/zayd_hammoudeh_lab2_exercise4/job.properties
@@ -6,5 +6,5 @@ examplesRoot=examples
 oozie.use.system.libpath=true
 oozie.libpath=maprfs:///oozie/share/lib
 
-oozie.wf.application.path=maprfs:/user/user01/workflow.xml
+oozie.wf.application.path=maprfs:/user/user01/LAB2_SUBMISSION/E4/workflow.xml
 
