--- a/Labs/Lab2/submission/E1/rsyslog.conf
+++ b/Labs/Lab2/submission/E1/rsyslog.conf
@@ -76,5 +76,5 @@ local7.*                                                /var/log/boot.log
 #$ActionQueueType LinkedList   # run asynchronously
 #$ActionResumeRetryCount -1    # infinite retries if host is down
 # remote host is: name/ip:port, e.g. 192.168.0.1:514, port optional
-*.* @@mapr1node:6076
+*.* @@localhost:5140
 # ### end of the forwarding rule ###
