--- a/Labs/Lab3/KMeans_KNN/.project
+++ b/Labs/Lab3/KMeans_KNN/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercise1_and_2</name>
+	<name>KMeans_KNN</name>
 	<comment></comment>
 	<projects>
 	</projects>
